# MindRouter

./: .env.example  .env.prod.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mock  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  log.txt  production_test.py  pyproject.toml  stress.py  test.py
agentic_ai/: README.md
agentic_ai/mcp/: README.md  mindrouter.mcpb
agentic_ai/mcp/desktop-extension/: README.md  manifest.json
agentic_ai/mcp/desktop-extension/server/: index.mjs
agentic_ai/mcp/search/: server.py
agentic_ai/skills/: README.md
agentic_ai/skills/web-search/: SKILL.md
backend/: __init__.py
backend/app/: __init__.py  logging_config.py  main.py  mcp_entrypoint.py  settings.py
backend/app/api/: __init__.py  admin_api.py  anthropic_api.py  auth.py  conversations_api.py  health.py  mcp_proxy.py  mcp_server.py  models_api.py  ollama_api.py  responses_api.py  search_api.py  telemetry_api.py  v1_openai.py  video_api.py  voice_api.py
backend/app/core/: __init__.py  canonical_schemas.py  context_trim.py  latex_normalize.py  otel.py  redis_client.py  validators.py
backend/app/core/scheduler/: __init__.py  fairshare.py  policy.py  queue.py  routing.py  scoring.py
backend/app/core/telemetry/: __init__.py  latency_tracker.py  models.py  registry.py
backend/app/core/translators/: __init__.py  anthropic_in.py  diffusion_out.py  field_validation.py  ollama_in.py  ollama_out.py  openai_in.py  responses_in.py  responses_stream.py  vllm_out.py
backend/app/dashboard/: __init__.py  azure_auth.py  blog.py  blog_export.py  chat.py  dlp_routes.py  email_routes.py  images.py  routes.py  video.py  voice_chat.py
backend/app/dashboard/templates/: base.html  chat.html  voice_chat.html
backend/app/db/: __init__.py  archive_models.py  base.py  chat_crud.py  crud.py  models.py  session.py
backend/app/db/migrations/: __init__.py  env.py
backend/app/security/: __init__.py  api_keys.py  password_hash.py  rate_limits.py
backend/app/services/: __init__.py  branding.py  conversations_store.py  dlp_scanner.py  dlp_worker.py  email_service.py  image_policy.py  inference.py  model_enrichment.py  ocr.py  responses_store.py  responses_websearch.py  retention.py  video_runner.py  video_store.py  video_worker_client.py  web_search.py  website_publisher.py
backend/app/services/search/: __init__.py  base.py  brave.py  registry.py  searxng.py
backend/app/storage/: __init__.py  artifacts.py
backend/app/tests/: __init__.py  conftest.py
backend/app/tests/integration/: conftest.py  test_live_backends.py  test_rag_pipeline.py  (+2 more)
deploy/: DEPLOYMENT.md  apache-mindrouter.conf  apache-mindrouter.insight.conf  apache-mindrouter2.insight.conf
deploy/flux2/: README.md  serve_klein.py
docs/: architecture.md  branding.md  gallery-video-bridge-scope.md  images-api.md  img2img-scope.md  index.md  ip-forwarding-security.md  media-studio-integration.md  responses-api-plan.md  scheduler.md  video-api.md  video-generation-plan.md  video-queue-robustness-plan.md  voice-api.md
mariadb/: archive.cnf  custom.cnf
mcp/: README.md
mcp/search/: server.py
nginx/: nginx.conf
scripts/: concurrency_test.py  demo_fairness.py  generate_encryption_keys.sh  init_db.sql  migrate_thumbnails.py  seed_dev_data.py  sync_nodes_to_prod.py  usage_audit.py  usage_audit_by_user.py
sidecar/: Dockerfile.sidecar  deploy_sidecars.sh  gpu_agent.py  mindrouter-sidecar-nginx.conf  requirements.txt
sidecar/tests/: test_gpu_agent.py  test_gpu_agent_stress.py
tests/: e2e_chat.py  test_structured_thinking.py  test_tool_calling_live.py
video-worker/: README.md  app.py  config.py  engine.py  requirements.txt  worker.py
video-worker/deploy/: nginx-video-worker.conf  video-worker.service
video-worker/tests/: test_worker.py
(+165 files in other folders)
